# gnuchess

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README-svn  TODO  configure.ac  iq6.epd
doc/: Makefile.am  README  README_adapter  README_engine  README_engine_technical  gnuchess.texi  version.texi
man/: Makefile.am
po/: LINGUAS  POTFILES  POTFILES.in  da.po  de.po  eo.po  es.po  fr.po  gl.po  gnuchess.pot  nb.po  nl.po  pt_BR.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po
src/: Makefile.am  components.cc  components.h  config.h.in  gnuchess.ini  main.cc
src/adapter/: adapter.cpp  adapter.h  attack.cpp  attack.h  board.cpp  board.h  book.cpp  book.h  book_make.cpp  book_make.h  book_merge.cpp  book_merge.h  colour.cpp  colour.h  engine.cpp  engine.h  epd.cpp  epd.h  fen.cpp  fen.h  game.cpp  game.h  hash.cpp  hash.h  io.cpp  io.h  line.cpp  line.h  list.cpp  list.h  main.cpp  main.h  move.cpp  move.h  move_do.cpp  move_do.h  move_gen.cpp  move_gen.h  move_legal.cpp  move_legal.h  (+22 more)
src/engine/: book.cpp  protocol.cpp  search_full.cpp
src/frontend/: Makefile.am  atak.c  cmd.c  cmd.cc  common.h  debug.c  debug.cc  engine.c  engine.cc  epd.c  genmove.c  init.c  inlines.h  input.cc  lexpgn.c  lexpgn.cc  lexpgn.ll  move.c  move.cc  output.c  output.cc  pgn.c  pgn.cc  players.c  players.cc  solve.c  solve.cc  swap.c  ttable.c  util.c  version.h
test/: README  endgame.epd
test/commands/: Polgar-Karpov.epd  Polgar-Karpov.pgn  gnuchess.ini  test_command.tcl
